style.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
}

html {
  overflow: scroll;
  overflow-x: hidden;
}
::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

body {
  min-height: 100vh;
  min-width: 100%;
  box-sizing: border-box;
  background: #ccdaff;
  color: #395db8;
  font-family: 'Manrope', sans-serif;
  line-height: 1;
}

a {
  color: #395db8;
  text-decoration: none;
}
a:focus {
  color: inherit;
}

/* navbar */
.navbar {
  position: fixed;
  width: 100%;
  height: 9vh;
  background: #bdd0ff;
  font-size: 1.5rem;
}
.navbar .toggleNav {
  display: none;
}
.navbar .flex-wrapper {
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar .flex-wrapper .flex-child {
  padding: 2rem;
  text-transform: uppercase;
}
.navbar .flex-wrapper .right {
  padding: 0;
  flex: 1;
  text-align: end;
}
.navbar .flex-wrapper .right .icon {
  padding: 1rem;
}

@media all and (max-width: 750px) {
  .navbar {
    text-align: center;
  }
  .navbar .toggleNav {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
  }
  .navbar .flex-wrapper {
    display: none;
    height: auto;
    flex-wrap: wrap;
    background-color: #bdd0ff;
  }
  .navbar .flex-wrapper.open {
    display: flex;
    border: solid 1px #395db8;
  }
  .navbar .flex-wrapper .flex-child {
    padding: 1rem;
    flex: 1 1 50%;
  }
  .navbar .flex-wrapper .right {
    text-align: center;
    padding: 0;
  }
}
@media all and (max-width: 550px) {
  .navbar .flex-wrapper .flex-child {
    padding: 1rem;
    flex: 1 1 100%;
  }
}

/* home */
.home {
  height: 100vh;
}

.home .main {
  height: 80vh;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.home .main .content {
  font-size: 6rem;
  padding-bottom: 2rem;
}
.home .main .content .unique {
  font-size: 6rem;
  padding: 0.7rem;
  padding-top: 0;
  background: #395db8;
  color: #e5e5e5;
}
.home .main .description {
  font-size: 3.6rem;
}

/* about */
.about {
  height: 100vh;
}
.about .main {
  text-align: center;
  height: 94vh;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.about .main .image {
  background-image: url(./assets/d.jpg);
  height: 17rem;
  width: 17rem;
  /* margin: auto; */
  background-color: #bdd0ff;
  background-blend-mode: luminosity;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
  border-radius: 50%;
  background-repeat: no-repeat;
  background-size: 100%;
}
.about .main .content {
  margin-top: 1rem;
}
.about .main .content .title {
  font-size: 3rem;
  margin: 1rem 0;
}
.about .main .content .subtitle {
  font-size: 2rem;
}
.about .main .description {
  font-size: 1.5rem;
  text-align: center;
  width: 95%;
  margin-top: 2.5rem;
}

/* portfolio */
.portfolio {
  height: 100vh;
}
.portfolio .main {
  height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.portfolio .header {
  font-size: 4rem;
  text-transform: lowercase;
  text-decoration: underline;
  text-align: center;
}
.portfolio .description {
  margin-top: 2rem;
  font-size: 1.5rem;
  text-align: center;
  font-style: italic;
}
.portfolio .description .unique {
  text-decoration: underline;
}

/* contact */
.contact {
  height: 100vh;
}
.contact .main {
  height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.contact .header {
  font-size: 4rem;
  text-transform: lowercase;
  text-decoration: underline;
  text-align: center;
  margin-bottom: 2rem;
}
.contact .body {
  /*  */
}
.contact .body .icons {
  background: #bdd0ff;
  font-size: 5rem;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}
.contact .body .icons .icon {
  padding: 1rem;
}
.contact .body .icons .icon:hover {
  color: #ccdaff;
  background: #395db8;
  transition: all 0.2s ease 0s;
  box-shadow: 5px 5px 7px -5px rgba(0,0,0,0.53);
}

.tooltip {
  position: relative;
  display: inline-block;
}
.tooltip .tooltiptext {
  visibility: hidden;
  width: 8rem;
  background: #395db8;
  text-align: center;
  color: #bdd0ff;
  padding: 1rem;
  border-radius: 5%;
  text-transform: capitalize;

  position: absolute;
  z-index: 1;
  right: 150%;
  top: -64%;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  top: 40%;
  left: 103%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent #395db8;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

@media (max-width: 735px) {
  .home .main {
    height: 85vh;
  }
  .home .main .content {
    line-height: 1.3;
    font-size: 5.3rem;
  }
  .home .main .content .unique {
    font-size: 5.3rem;
    padding-top: 0;
  }
  .home .main .description {
    font-size: 2.5rem;
  }

  .about .main {
    height: 95vh;
  }
  .about .main .content .title {
    margin-top: 1rem;
  }
  .about .main .content .subtitle {
    font-size: 1.5rem;
  }
  .about .main .description {
    font-size: 1.2rem;
  }

  .portfolio .main {
    height: 47vh;
  }

  .contact .main {
    height: 73vh;
  }
  .contact .body .icons .icon {
    text-align: center;
    flex: 1 1 50%;
    padding: 0.5rem;
  }
}

